--- a/html/event.html
+++ b/html/event.html
@@ -9,6 +9,7 @@
     <body>
         <div>
             <button>123</button>
+            <input type="week">
         </div>
         <script>
             var btn = document.querySelector('button')
