--- a/html/interview.html
+++ b/html/interview.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <button onclick="myClear">myClear</button>
+        <div id="GC">GC</div>
     </body>
     <script>
         // 1. 写一个 mySetInterVal(fn, a, b),每次间隔 a,a+b,a+2b 的时间，然后写一个 myClear，停止上面的 mySetInterVal
