--- a/html/event.html
+++ b/html/event.html
@@ -9,8 +9,51 @@
     <body>
         <div>
             <button>123</button>
-            <input type="week">
+            <input type="week" />
         </div>
+        <script>
+            // 1 1 2 3 5 8
+            function fib(n) {
+                if (n == 0) {
+                    return 0
+                }
+                if (n <= 2) {
+                    return 1
+                }
+                return fib(n - 1) + fib(n - 2)
+            }
+           
+            function fnN(n) {
+                if (n <= 1) {
+                    return 1
+                }
+                return n * fnN(n - 1)
+            }
+            // 快排
+            let quickSort = function(arr) {
+                if (arr.length <= 1) {
+                    return arr
+                }
+                let leftArr = [],
+                    rightArr = []
+                // let pivotIndex = Math.floor(arr.length / 2)
+
+                // let pivot = arr.splice(pivotIndex, 1)[0]
+                let pivot = arr.shift()
+                for (let i = 0; i < arr.length; i++) {
+                    const element = arr[i]
+                    if (element < pivot) {
+                        leftArr.push(element)
+                    } else {
+                        rightArr.push(element)
+                    }
+                }
+                console.log(leftArr, rightArr)
+                return quickSort(leftArr).concat([pivot], quickSort(rightArr))
+            }
+            let a = quickSort([1, 123, 524, 2, 5, 1, 231, 45])
+            console.log(a)
+        </script>
         <script>
             var btn = document.querySelector('button')
             var div = document.querySelector('div')
